--- a/html/chat.html
+++ b/html/chat.html
@@ -92,12 +92,12 @@
 
     <header>
       <i class="mi menubtn" id="openMenu">menu</i>
-      <span class="header_chname">Michi</span>
+      <span class="header_chname">michi</span>
       <i class="mi plbtn" id="openplistMenu">people</i>
     </header>
     <div class="emptych">
       <img src="./assets/poggers.jpg" alt="Welcome to Michi!" class="emptych_img">
-      <h2>It's lonely in <span class="mention" id="emptych_chname">Michi</span>...</h2>
+      <h2>It's lonely in <span class="mention" id="emptych_chname">michi</span>...</h2>
       <p class="subtitle" style="margin-top: 1em;">
         Maybe you could try sending some messages?
       </p>
