--- a/html/tos.html
+++ b/html/tos.html
@@ -29,54 +29,55 @@
 <body>
   <main>
     <h1>Our Terms of Service (ToS)</h1>
+    <p class="lastupd">Last updated: 02.10.2022</p>
     <h3>
       1. Certainly
     </h3>
-    <ul>
-      <li>1.1 We, Us, Our, Website, Service is an alias for "michi"</li>
-      <li>1.2 <b> Administrator</b> - is Service User with full/limited access to Service</li>
-      <li>1.3 <b>User</b> -
-        an adult or minor natural person using the Service
-      </li>
-      <li>1.4 <b>Account</b> -
-        an individual page in the Service to interact with it. Has full/limited access to the Service
-      </li>
-      <li>1.5 <b>Third-party content</b> - is a information by Third-party persons, links by Third-party persons,
-        pictures and images by Third-party persons, and any kind of information posted by Third-party person, by
-        Third-party persons.</li>
-    </ul>
-    <h3>2. Service services</h3>
-    <ul>
-      <li>2.1 The Service Administrator is does not give you a guarantee, that
-        <br>
-        The service will meet all the requirements of the User;
-        <br>
-        The results which may be obtained through the Service will be accurate and reliable.
-      </li>
-      <li>2.2 For normal Service work, User undertakes to register at the Service.
-        <br>
-        The user is obliged to provide the following information when registering:
-        <br>
-        <b>Nickname</b>
-        <br>
-        <b>E-mail</b>
-      </li>
-      <li>2.3
-        Sending the registration form to the Administrator is regarded as:
-        the User's consent to the processing of personal data (<b>Nickname and E-mail)</b> for the provision of services
-        in the Service and
-        <br>
-        <br>
-        User's acceptance of the Terms of Service.
-      </li>
-    </ul>
-    <br>
-    <br>
-    <br>
-    If you read this and accept the ToS…
-    <a href="./join.html">
-      register at michi
-    </a>
+    <div class="content">
+      <ul>
+        <li>1.1 We, Us, Our, Website, Service is an alias for "michi"</li>
+        <li>1.2 <b> Administrator</b> - is Service User with full/limited access to Service</li>
+        <li>1.3 <b>User</b> -
+          an adult or minor natural person using the Service
+        </li>
+        <li>1.4 <b>Account</b> -
+          an individual page in the Service to interact with it. Has full/limited access to the Service
+        </li>
+        <li>1.5 <b>Third-party content</b> - is a information by Third-party persons, links by Third-party persons,
+          pictures and images by Third-party persons, and any kind of information posted by Third-party person, by
+          Third-party persons.</li>
+      </ul>
+      <h3>2. Service services</h3>
+      <ul>
+        <li>2.1 The Service Administrator is does not give you a guarantee, that
+          <br>
+          The service will meet all the requirements of the User;
+          <br>
+          The results which may be obtained through the Service will be accurate and reliable.
+        </li>
+        <li>2.2 For normal Service work, User undertakes to register at the Service.
+          <br>
+          The user is obliged to provide the following information when registering:
+          <br>
+          <b>Nickname</b>
+          <br>
+          <b>E-mail</b>
+        </li>
+        <li>2.3
+          Sending the registration form to the Administrator is regarded as:
+          the User's consent to the processing of personal data (<b>Nickname and E-mail)</b> for the provision of
+          services
+          in the Service and User's acceptance of the Terms of Service.
+        </li>
+      </ul>
+      <br>
+      <br>
+      <br>
+      If you have read this and accept the rules:
+      <a href="./join.html">
+        register at michi
+      </a>
+    </div>
   </main>
 </body>
 
